<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dim_60"
            app:layout_constraintBottom_toTopOf="@+id/rlBottom"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_black"
                android:padding="20dp"
                android:text="@string/welcome_to_side_engine"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <RadioGroup
                android:id="@+id/rgEnvironment"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dim_22"
                android:layout_height="match_parent" >


                <RadioButton
                    android:id="@+id/rbProduction"
                    android:layout_width="wrap_content"
                    android:textSize="20sp"
                    android:checked="true"
                    android:text="@string/production_mode"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:id="@+id/rbSandBox"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/dim_8"
                    android:textSize="20sp"
                    android:text="@string/sandbox_mode"
                    android:layout_height="wrap_content"/>


            </RadioGroup>

            <RadioGroup
                android:id="@+id/swMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:checked="true"
                android:fontFamily="@font/avenir_black"
                android:text="Production mode"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_20" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dim_100"
                android:src="@drawable/logo"
                android:layout_marginTop="@dimen/dim_40"
                android:layout_gravity="center"
                android:layout_height="@dimen/dim_100"/>

        </LinearLayout>


    </LinearLayout>

        <LinearLayout
            android:id="@+id/llBottom"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dim_80"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/btn_bg_corner"
                android:text="Start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPauseResume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/btn_bg_corner"
                android:text="Pause"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
        </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_centerInParent="true"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>